--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "dev": "nodemon index.js",
     "start": "node index.js",
+    "format": "prettier --write .",
     "test": "vitest"
   },
   "type": "module",
@@ -25,6 +26,7 @@
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
+    "prettier": "^3.3.3",
     "supertest": "^7.0.0",
     "vitest": "^2.0.5"
   }
