Feat: Completed password reset flow, with locking login while completing reset (Fixes #2)

--- a/.env.example
+++ b/.env.example
@@ -2,3 +2,5 @@ DATABASE_URL="postgresql://username:password@ip-address:port/db-name?schema=publ
 RESEND_EMAIL=user@example.com
 RESEND_API_KEY=re_************
 SECRET_KEY=a-random-secret
+HASHING_PEPPER=a-random-pepper
+REDIS_URL=redis://localhost:6379
