--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon index.js",
-    "start": "node index.js",
+    "dev": "nodemon ./bin/www",
+    "start": "node ./bin/www",
     "format": "prettier --write .",
     "test": "vitest"
   },
