Feat: Added morgan logger in dev mode

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "redis": "^4.7.0",
     "resend": "^4.0.0"
   },
