Feat: Added dockerfile for containerizing the server

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "nodemon ./bin/www",
     "start": "node ./bin/www",
     "format": "prettier --write .",
+    "docker:build": "docker build -t express-app:latest .",
     "test": "vitest"
   },
   "type": "module",
